Modifiche index.html

--- a/ProgettoLocale/Templates/index.html
+++ b/ProgettoLocale/Templates/index.html
@@ -10,7 +10,7 @@
 <table>
     <thead>
     <tr>
-        <th>Colonna 1</th>
+        <th>Colonna </th>
         <th>Colonna 2</th>
         <th>Colonna 1</th>
         <th>Colonna 2</th>
