Inserito match ricerche tra file

--- a/ProgettoLocale/Templates/index.html
+++ b/ProgettoLocale/Templates/index.html
@@ -15,9 +15,10 @@
 </head>
 <body>
 <form action="/leggi_json" method="post">
-    <label for="codice_chiesa">Inserisci il Codice Chiesa:</label>
-    <input type="text" id="codice_chiesa" name="codice_chiesa" required>
-    <button type="submit">Leggi JSON</button>
+    <label for="nome_chiesa">Inserisci il nome della chiesa:</label>
+    <input type="text" id="nome_chiesa" name="nome_chiesa" required>
+    <button type="submit">Cerca Reperti</button>
 </form>
+
 </body>
 </html>
