--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href = "/static/style.css">
     <title>Elenco Chiese</title>
 </head>
 <body>
+<div class="search-bar">
+<input type="text" class="search-input" placeholder="Cerca...">
+<button class="search-button">Cerca</button>
+</div>
+
 <h1>Elenco Chiese</h1>
 {% if chiese %}
 <ul>
