--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Risultati Ricerca</title>
+    <style>
+        html,
+        body,
+        #viewDiv {
+            padding: 10px;
+            margin: 0;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
+<div id="viewDiv"></div>
 <h1>Ricerca Chiesa</h1>
 <form action="/" method="GET">
     <label for="search_input">Inserisci il nome della chiesa:</label><br>
@@ -76,5 +87,32 @@
 <p>Nessun risultato trovato per "{{ query }}".</p>
 {% endif %}
 {% endif %}
+
+<div id="mapViewDiv" style="height: 400px; width: 100%;"></div>
+
+<link rel="stylesheet" href="https://js.arcgis.com/4.29/esri/themes/light/main.css">
+<script src="https://js.arcgis.com/4.29/"></script>
+<script>
+    require([
+        "esri/WebMap",
+        "esri/views/MapView",
+        "esri/config",
+        "dojo/domReady!"
+    ], function(WebMap, MapView, esriConfig) {
+        // Imposta la chiave API per l'autenticazione
+        esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
+
+        var webmap = new WebMap({
+            portalItem: {
+                id: "5ae37f33f52a4eefbc098507ddd9f92d" // Sostituisci con l'ID della tua mappa ArcGIS
+            }
+        });
+
+        var view = new MapView({
+            container: "mapViewDiv",
+            map: webmap
+        });
+    });
+</script>
 </body>
 </html>
