--- a/templates/index.html
+++ b/templates/index.html
@@ -94,14 +94,11 @@
 <script src="https://js.arcgis.com/4.29/"></script>
 <script>
     require([
-        "esri/WebMap",
+        "esri/Map",
         "esri/views/MapView",
-        "esri/config",
-        "dojo/domReady!"
-    ], function(WebMap, MapView, esriConfig) {
+        "esri/WebMap"
+    ], function(Map, MapView, WebMap) {
         // Imposta la chiave API per l'autenticazione
-        esriConfig.apiKey = "AAPK28024a6180ac48739d279d7a90c08c37z2nA-K4du-xQN6XMFh2rgWo6uM53XTVwJg3XJ8OIXlN5y3i9uyRJh3S6dHbZdzn9";
-
         var webmap = new WebMap({
             portalItem: {
                 id: "5ae37f33f52a4eefbc098507ddd9f92d" // Sostituisci con l'ID della tua mappa ArcGIS
