--- a/templates/result.html
+++ b/templates/result.html
@@ -3,39 +3,47 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/style.css">
     <title>Risultati Ricerca</title>
 </head>
 <body>
 {% if chiese %}
 <h2>Risultati della ricerca per "{{ query }}"</h2>
-<ul>
-    {% for chiesa in chiese %}
-    <li>
-        <h3>Chiesa: {{ chiesa["Locale Nome della Chiesa"] }}</h3>
-        <p>Indirizzo: {{ chiesa["Indirizzo"] }}</p>
-        <h4>Reperti:</h4>
-        <ul>
-            {% for reperto in reperti %}
-            {% if reperto["Codice Chiesa"] == chiesa["Codice Chiesa"] %}
-            <li>
-                <h5>Nome Reperto: {{ reperto["Codice Reperto"] }}</h5>
-                <!-- Aggiunta delle immagini del reperto -->
-                {% if reperto.image_urls %}
-                {% for url in reperto.image_urls %}
-                <img src="{{ url }}" alt="Immagine del {{ reperto['Codice Reperto'] }}" style="width:100px; height:auto;">
-                {% endfor %}
-                {% else %}
-                <p>Nessuna immagine disponibile.</p>
-                {% endif %}
-                <p>Altro Materiale: {{ reperto["Altro Materiale"] }}</p>
-                <!-- Continua con altri dettagli del reperto come prima -->
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </li>
-    {% endfor %}
-</ul>
+    <ul>
+        {% for chiesa in chiese %}
+        <li>
+            <h3>Chiesa: {{ chiesa["Locale Nome della Chiesa"] }}</h3>
+                <p>Indirizzo: {{ chiesa["Indirizzo"] }}</p>
+                <h4>Reperti:</h4>
+                <ul>
+                    {% for reperto in reperti %}
+                        {% if reperto["Codice Chiesa"] == chiesa["Codice Chiesa"] %}
+                        <li>
+                            <h5>Nome Reperto: {{ reperto["Codice Reperto"] }}</h5>
+                            <!-- Aggiunta delle immagini del reperto -->
+                                {% if reperto.image_urls %}
+                                    {% for url in reperto.image_urls %}
+                                        <div class="relic-container">
+                                            <div class="image-container">
+                                                <img src="{{ url }}" alt="Immagine di {{ reperto['Codice Reperto'] }}" class="img-fluid">
+                                            </div>
+                                            <div class="inscription-container">
+                                                <p class="latin-inscription">Inscrizione Latina: <br>{{ reperto["Latino"] }}</p>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                    {% else %}
+                                        <p>Nessuna immagine disponibile.</p>
+                                    {% endif %}
+                                    <p>Altro Materiale: {{ reperto["Altro Materiale"] }}</p>
+                            <!-- Continua con altri dettagli del reperto come prima -->
+                        </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+        </li>
+        {% endfor %}
+    </ul>
 {% else %}
 {% if query %}
 <p>Nessun risultato trovato per "{{ query }}".</p>
