--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,9 @@
     <button type="submit" class="search-button">Cerca</button>
 </form>
 
-<div class="custom-div" id="viewDiv"></div>
+<div class="map-container">
+    <div class="custom-div" id="viewDiv"></div>
+</div>
+
 </body>
 </html>
